--- a/branches/MonoGame/Jypeli/Jypeli-VS2012.csproj
+++ b/branches/MonoGame/Jypeli/Jypeli-VS2012.csproj
@@ -176,6 +176,7 @@
     <Compile Include="Events\Operation.cs" />
     <Compile Include="Physics2DDotNet\Shapes\BitmapHelper.cs" />
     <Compile Include="Physics2DDotNet\Shapes\VertexHelper.cs" />
+    <Compile Include="Widgets\Background.cs" />
     <Compile Include="Widgets\BarGauge.cs" />
     <Compile Include="Widgets\Label.cs" />
     <Compile Include="Widgets\MessageDisplay.cs" />
