Screen scaling. More compatible display resolutions for WP8. Game.ClearControls method. Phone back button listening.

--- a/Jypeli/Jypeli-WP8.csproj
+++ b/Jypeli/Jypeli-WP8.csproj
@@ -94,7 +94,9 @@
     <Compile Include="Content\Auto.cs" />
     <Compile Include="Content\Bullet.cs" />
     <Compile Include="Content\JypeliContentManager.cs" />
+    <Compile Include="Content\LargeFontBold.cs" />
     <Compile Include="Content\MediumFont.cs" />
+    <Compile Include="Controls\BackButton\BackButton.cs" />
     <Compile Include="Controls\Controller\AnalogControl.cs" />
     <Compile Include="Controls\Controller\AnalogState.cs" />
     <Compile Include="Controls\Controller\ButtonState.cs" />
@@ -238,11 +240,17 @@
     <Compile Include="WP8\Phone.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\MonoGame\MonoGame.Framework\MonoGame.Framework.WindowsPhone.csproj">
-      <Project>{BAA9A6E4-7690-4DE0-9531-DE0EAEEC9739}</Project>
-      <Name>MonoGame.Framework.WindowsPhone</Name>
-    </ProjectReference>
+  <ItemGroup Condition=" '$(Platform)' == 'x86' ">
+    <Reference Include="MonoGame.Framework">
+      <HintPath>..\MonoGame\MonoGame.Framework\bin\WindowsPhone\x86\Release\MonoGame.Framework.dll</HintPath>
+      <SpecificVersion>False</SpecificVersion>
+    </Reference>
+  </ItemGroup>
+  <ItemGroup Condition=" '$(Platform)' == 'ARM' ">
+    <Reference Include="MonoGame.Framework">
+      <HintPath>..\MonoGame\MonoGame.Framework\bin\WindowsPhone\ARM\Release\MonoGame.Framework.dll</HintPath>
+      <SpecificVersion>False</SpecificVersion>
+    </Reference>
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Microsoft\$(TargetFrameworkIdentifier)\$(TargetFrameworkVersion)\Microsoft.$(TargetFrameworkIdentifier).$(TargetFrameworkVersion).Overrides.targets" />
   <Import Project="$(MSBuildExtensionsPath)\Microsoft\$(TargetFrameworkIdentifier)\$(TargetFrameworkVersion)\Microsoft.$(TargetFrameworkIdentifier).CSharp.targets" />
